# super-duper-robot

./: Cargo.toml
game/: Cargo.toml
game/data/: human.glb  level.glb  level_collider.mtl  leveltest.glb  lvl.blend  lvl.blend1
game/src/: main.rs
rbot/: Cargo.toml
rbot/src/: input.rs  lib.rs
