[package]
name = "game"
version = "0.1.0"
authors = ["Ellen Nyan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rbot = { path = "../rbot" }
winit = "0.24"
rend3 = { path = "../../rend3/rend3" }
rend3-list = { path = "../../rend3/rend3-list" }
glam = "0.12"
pollster = "0.2"
wgpu-subscriber = "0.1"
image = "0.23"
gltf = { version = "0.15", features = ["utils"]}
histogram = "0.6"
obj = "0.10"